--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ venv/
 ExampleFiles/report-2023-01-01.sql.bz2
 .gitignore
 ExampleFiles/stationInfo-yearto-2023-03-01.sql.bz2
+ExampleFiles/spots-2023-01-01.csv
